Fix facets on mobile.

--- a/assets/new-styles/page.css
+++ b/assets/new-styles/page.css
@@ -1235,7 +1235,7 @@ body:has(.search-container) {
   }
 
   .results-area .search-result-holder,
-  .results-area .search-result-holder > div,
+  .results-area .search-result-holder > div:not(.FacetBreadcrumbs--breadcrumbs),
   .results-area .search-tab-container,
   .results-area .tab-content,
   .results-area .tab-pane.active {
